tests/neg/i9309.scala
case class Foo(foo: Int) {
  inline def foo = (foo) // error
}